# verbalaize

./: .dockerignore  .gitignore  Dockerfile  FRONTEND_BACKEND_CONNECTION.md  Makefile  PLANO_DESKTOP_TAURI.md  README.md  README_DOCKER.md  WhatsApp Audio 2026-04-08 at 23.02.07.opus  build.sh  cleanup-frontend.sh  docker-compose.yml  docker-run.sh  docker.sh  down.sh  plano_codex.md  pytest.ini  requirements.txt  scripts.sh  test-audio-formats.sh  test-connection.sh  up.sh  validate-setup.sh
.github/workflows/: desktop-release.yml
app/: Dockerfile  main.py  pytest.ini  requirements.txt
app/core/: config.py
app/middleware/: token.py
app/routes/: models.py  transcription.py
app/schemas/: transcription.py
app/services/: whisper_service.py
app/tests/: conftest.py  test_app_routes.py  test_config.py  test_model_routes.py  test_real_audio_smoke.py  test_transcription_routes.py  test_transcription_service.py  test_transcription_websocket.py
desktop/: package-lock.json  package.json
desktop/scripts/: _common.py  (+3 more)
desktop/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
desktop/src-tauri/binaries/: README.md
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/resources/ffmpeg/: README.md
desktop/src-tauri/resources/ffmpeg/aarch64-apple-darwin/: ffprobe
desktop/src-tauri/src/: main.rs
frontend/: .env.docker  Dockerfile  README.md  eslint.config.js  fix-imports.sh  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
pyinstaller/: verbalaize-backend.spec
(+30 files in other folders)
